load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "instance.go",
        "node.go",
        "param.go",
    ],
    importpath = "valerian/app/infra/discovery/model",
    visibility = ["//visibility:public"],
    deps = [
        "//library/ecode:go_default_library",
        "//library/log:go_default_library",
    ],
)
