load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "valerian/app/interface/account/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//app/interface/account/conf:go_default_library",
        "//app/interface/account/http:go_default_library",
        "//app/interface/account/service:go_default_library",
        "//library/ecode/tip:go_default_library",
        "//library/log:go_default_library",
        "//library/tracing:go_default_library",
        "//vendor/github.com/spf13/pflag:go_default_library",
    ],
)

go_binary(
    name = "cmd",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
