load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "dao.go",
        "id_cert.go",
        "mc.go",
    ],
    importpath = "valerian/app/interface/certification/dao",
    visibility = ["//visibility:public"],
    deps = [
        "//app/interface/certification/conf:go_default_library",
        "//app/interface/certification/model:go_default_library",
        "//library/cache/memcache:go_default_library",
        "//library/database/sqalx:go_default_library",
        "//library/log:go_default_library",
    ],
)
