load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "http.go",
        "id_cert.go",
        "work_cert.go",
    ],
    importpath = "valerian/app/interface/certification/http",
    visibility = ["//visibility:public"],
    deps = [
        "//app/interface/certification/conf:go_default_library",
        "//app/interface/certification/service:go_default_library",
        "//library/ecode:go_default_library",
        "//library/log:go_default_library",
        "//library/net/http/mars:go_default_library",
        "//library/net/http/mars/middleware/auth:go_default_library",
    ],
)
