load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "arg_work_cert.go",
        "const.go",
        "model.go",
        "resp_id_cert.go",
        "resp_work_cert.go",
    ],
    importpath = "valerian/app/interface/certification/model",
    visibility = ["//visibility:public"],
    deps = ["//library/database/sqlx/types:go_default_library"],
)
