load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["http.go"],
    importpath = "valerian/app/interface/editor/http",
    visibility = ["//visibility:public"],
    deps = [
        "//app/interface/editor/conf:go_default_library",
        "//app/interface/editor/model:go_default_library",
        "//app/interface/editor/service:go_default_library",
        "//library/ecode:go_default_library",
        "//library/log:go_default_library",
        "//library/net/http/mars:go_default_library",
    ],
)
