load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "arg.go",
        "resp.go",
    ],
    importpath = "valerian/app/interface/editor/model",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/go-ozzo/ozzo-validation:go_default_library",
        "//vendor/github.com/go-ozzo/ozzo-validation/is:go_default_library",
    ],
)
