load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "link.go",
        "service.go",
    ],
    importpath = "valerian/app/interface/editor/service",
    visibility = ["//visibility:public"],
    deps = [
        "//app/interface/editor/conf:go_default_library",
        "//app/interface/editor/model:go_default_library",
        "//library/ecode:go_default_library",
        "//library/log:go_default_library",
        "//vendor/github.com/PuerkitoBio/goquery:go_default_library",
        "//vendor/gopkg.in/h2non/gentleman.v2:go_default_library",
        "//vendor/gopkg.in/h2non/gentleman-retry.v2:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
