load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "dao.go",
        "feedback.go",
        "feedback_type.go",
        "mc.go",
    ],
    importpath = "valerian/app/interface/feedback/dao",
    visibility = ["//visibility:public"],
    deps = [
        "//app/interface/feedback/conf:go_default_library",
        "//app/interface/feedback/model:go_default_library",
        "//library/cache/memcache:go_default_library",
        "//library/database/sqalx:go_default_library",
        "//library/log:go_default_library",
    ],
)
