load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "feedback.go",
        "http.go",
    ],
    importpath = "valerian/app/interface/feedback/http",
    visibility = ["//visibility:public"],
    deps = [
        "//app/interface/feedback/conf:go_default_library",
        "//app/interface/feedback/model:go_default_library",
        "//app/interface/feedback/service:go_default_library",
        "//library/ecode:go_default_library",
        "//library/log:go_default_library",
        "//library/net/http/mars:go_default_library",
        "//library/net/http/mars/middleware/auth:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
