load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "arg_feedback.go",
        "const.go",
        "model.go",
        "resp.go",
    ],
    importpath = "valerian/app/interface/feedback/model",
    visibility = ["//visibility:public"],
    deps = [
        "//library/database/sqlx/types:go_default_library",
        "//vendor/github.com/go-ozzo/ozzo-validation:go_default_library",
    ],
)
